# salmoning

./: .gitignore  .justfile  Cargo.toml  flake.nix  index.html  server.toml
assets/: audio.toml  config.toml  controls.toml  level  level.json  render.toml
assets/billboards/: list.json
assets/buildings/: list.json
assets/buildings/type1/sides/: list.json
assets/buildings/type1/tops/: list.json
assets/buildings/type2/sides/: list.json
assets/buildings/type2/tops/: list.json
assets/buildings/type3/sides/: list.json
assets/buildings/type3/tops/: list.json
assets/buildings/type4/sides/: list.json
assets/buildings/type4/tops/: list.json
assets/buildings/type5/sides/: list.json
assets/buildings/type5/tops/: list.json
assets/buildings/type6/sides/: list.json
assets/buildings/type6/tops/: list.json
assets/flora/: list.json
assets/models/: salmon.mtl
assets/models/hats/: _list.json  hat_bobblehat.mtl  hat_cap.mtl  hat_cat.mtl  hat_cop.mtl  hat_crab.mtl  hat_crown1.mtl  hat_crown2.mtl  hat_drill.mtl  hat_fish1.mtl  hat_fish2.mtl  hat_halo.mtl  hat_heart.mtl  hat_numberone.mtl  hat_star.mtl  hat_tophat.mtl
assets/particles/: list.json
assets/shaders/: billboard.glsl  main.glsl  main_instancing.glsl  main_no_instancing.glsl  minimap.glsl  sky.glsl  waypoint.glsl
assets/small_items/: list.json
assets/ui/: debug-69W2ghYX.js  debug-BxsjpJhi.js  debug-CPevh944.js  debug-CThJQoTo.js  debug-CeGruBaV.js  debug-DOR04JD-.js  debug-DWSzpArr.js  debug-DjfHceCd.js  debug-Dp7YqIDA.js  debug-DtLdcJfk.js  index.css  index.js
src/: assets.rs  controls.rs  editor.rs  game.rs  interop.rs  main.rs  particles.rs  race_editor.rs  server.rs  sound.rs  ui.rs
src/model/: mod.rs  net.rs
src/model/logic/: mod.rs
src/render/: instancing.rs  mod.rs  obj.rs  particle.rs  roads.rs
ui/: index.html  package-lock.json  package.json  sync  tsconfig.json  vite.config.ts
ui/src/: debug.ts  hack.ts  main.ts  money.ts  phone.ts  race_place.ts  race_summary.ts  reset.css  salmoning.d.ts  salmoning.js  style.css
