[package]
name = "salmoning"
version = "0.1.0"
edition = "2021"

[package.metadata.geng]
assets = ["assets", "server.toml"]

[dependencies]
evenio = { git = "https://github.com/kuviman/evenio", branch = "non-send" }
generational-arena = "0.2.9"
geng = "0.17"
serde = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustrict = "0.7.24"
ctrlc = "3.4.4"

[patch.crates-io]
# https://github.com/smol-rs/async-broadcast/pull/47
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" }
